<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">CampusPaths</string>
	<string name="main_title">CampusPaths</string>
   	<!-- Main screen -->
    <string name="route">Route</string>
    <string name="go">GO!</string>
    <string name="favorites">My Places</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    
    <string name="temp">Temp</string>
    
    <string name="darBase">Darwin Basement Floor Plan</string>
    <string name="darRmDest">Room 31 is in the basement of Darwin</string>
	<string name="newPath">New Path</string>
	
	<string name="buildingHint">Building Name</string>
	<string name="favs_title">My Places</string>
	<string name="edit_favs">Edit Places</string>
	<string name="save_favs">Save Places</string>
	<string name="places1">Place #1</string>
	<string name="places2">Place #2</string>
	<string name="places3">Place #3</string>
	<string name="places4">Place #4</string>
	<string name="places5">Place #5</string>
		
	<string name="start">Start</string>
	<string name="end">End</string>
	
	<string name="about_text"><b>Welcome to CampusPaths!</b>"\n"
	    This app is dedicated to helping you get around campus easier than ever before.
	    To begin simply choose your beginning and ending destinations,
	     then press \"GO!\" The subsequent screen will give you three route options optimized 
	     to get you to your destination the quickest and easiest."\n"
	    To zoom in on your destination just tap on the marker- a
	     screen showing you the precise location of your destination will appear. 
	     You can also save favorites so you never have to worry about finding that 
	     crumpled up post it note you wrote your schedule on again."\n"
	    If you want to save your classes ahead of time, use the My Places screen. 
	     To edit your Places, open up the menu and press \"Edit Places\". This will
	     take you to a screen where you can choose from all the locations on campus."\n\n"
	    <b>ABOUT THE TEAM</b>"\n"
	    Jolie Nazor - Original Organizer. Jolie kept the team organized and on track, coordinating meetings and checkpoints, as well as contributing essential code."\n"
	    Micah Gemmell - Android Ambassador. Micah has worked with android apps before, so he was the team\'s consultant and head programmer."\n"
	    Lauryn Loudermilk - Data Diva. Lauryn did whatever Jolie told her to do. Her main role in the project was getting the databse up and working but she also worked on UI."\n"
	    Mark Griffith - Map Master. Mark is in charge of graphics and images for the app. Aren\'t they beautiful?"\n"
	    Jake Neugass - Logic Leader. Jake spent endless hours figuring out how to make our program work. He built the main logic system!"\n"
	    </string>	
</resources>