<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="@color/background" 
    android:gravity="center" 
    android:padding="30dip">
    
	<TextView 
	    android:text="@string/main_title" 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content" 
	    android:layout_marginBottom="25dip" 
	    android:textSize="24.5sp"/>
	
	<Button 
	    android:id="@+id/route" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/route"
	    android:onClick="onRoute"/>
	
	<Button 
	    android:id="@+id/map" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/map"
	    android:onClick="onMap"/>
	
<!--   <Button 
	    android:id="@+id/favorites" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/favorites"
	    android:onClick="onFavorites"/>
	
	<Button 
	    android:id="@+id/about" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/about"
	    android:onClick="onAbout"/>
-->	
</LinearLayout>