<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topofeditfavs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/seawolf_blue"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/edit_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/edit_favs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />
        </RelativeLayout>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/background" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background" >

            <TextView android:id="@+id/TextView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:text="@string/places1" android:textAppearance="?android:attr/textAppearanceSmall" /><org.example.wolfshark.InstantAutoComplete
                android:id="@+id/favs1"
                android:layout_width="235dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView1"
                android:completionThreshold="1"
                android:hint="@string/buildingHint" />
 
            <Spinner
                android:id="@+id/room1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/favs1"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/favs1"
                android:layout_toRightOf="@+id/favs1" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs1"
                android:text="@string/places2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.example.wolfshark.InstantAutoComplete
                android:id="@+id/favs2"
                android:layout_width="235dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs1"
                android:layout_marginTop="20dip"
                android:completionThreshold="1"
                android:hint="@string/buildingHint" />

            <Spinner
                android:id="@+id/room2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/favs2"
                android:layout_toRightOf="@+id/favs2" />

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs2"
                android:text="@string/places3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.example.wolfshark.InstantAutoComplete
                android:id="@+id/favs3"
                android:layout_width="235dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs2"
                android:layout_marginTop="20dip"
                android:completionThreshold="1"
                android:hint="@string/buildingHint" />

            <Spinner
                android:id="@+id/room3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/favs3"
                android:layout_toRightOf="@+id/favs3" />

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs3"
                android:text="@string/places4"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.example.wolfshark.InstantAutoComplete
                android:id="@+id/favs4"
                android:layout_width="235dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs3"
                android:layout_marginTop="20dip"
                android:completionThreshold="1"
                android:hint="@string/buildingHint" />

             <Spinner
                android:id="@+id/room4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/favs4"
                android:layout_toRightOf="@+id/favs4" />

             <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs4"
                android:text="@string/places5"
                android:textAppearance="?android:attr/textAppearanceSmall" />
             
            <org.example.wolfshark.InstantAutoComplete
                android:id="@+id/favs5"
                android:layout_width="235dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/favs4"
                android:layout_marginTop="20dip"
                android:completionThreshold="1"
                android:hint="@string/buildingHint" />

            <Spinner
                android:id="@+id/room5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/favs5"
                android:layout_toRightOf="@+id/favs5" />

            <Button
                android:id="@+id/saveFavs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/favs5"
                android:onClick="onSaveFavs"
                android:text="@string/save_favs" />

			

        </RelativeLayout>
	</ScrollView>
 </LinearLayout>